cdk.out/CloudSentinel-Network.template.json
{
 "Resources": {
  "CloudSentinelVpcB6080008": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/Resource"
   }
  },
  "CloudSentinelVpcPublicSubnet1SubnetBBCB577F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/Subnet"
   }
  },
  "CloudSentinelVpcPublicSubnet1RouteTableA1379182": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/RouteTable"
   }
  },
  "CloudSentinelVpcPublicSubnet1RouteTableAssociation77798386": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPublicSubnet1RouteTableA1379182"
    },
    "SubnetId": {
     "Ref": "CloudSentinelVpcPublicSubnet1SubnetBBCB577F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "CloudSentinelVpcPublicSubnet1DefaultRouteCC798AC2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CloudSentinelVpcIGW997EA9B6"
    },
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPublicSubnet1RouteTableA1379182"
    }
   },
   "DependsOn": [
    "CloudSentinelVpcVPCGW620BC6C2"
   ],
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "CloudSentinelVpcPublicSubnet1EIP3FB3F356": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/EIP"
   }
  },
  "CloudSentinelVpcPublicSubnet1NATGateway1CFCBC48": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "CloudSentinelVpcPublicSubnet1EIP3FB3F356",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "CloudSentinelVpcPublicSubnet1SubnetBBCB577F"
    },
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ]
   },
   "DependsOn": [
    "CloudSentinelVpcPublicSubnet1DefaultRouteCC798AC2",
    "CloudSentinelVpcPublicSubnet1RouteTableAssociation77798386"
   ],
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet1/NATGateway"
   }
  },
  "CloudSentinelVpcPublicSubnet2Subnet0F4A1BA0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2/Subnet"
   }
  },
  "CloudSentinelVpcPublicSubnet2RouteTableE34659A3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2/RouteTable"
   }
  },
  "CloudSentinelVpcPublicSubnet2RouteTableAssociationBB69B182": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPublicSubnet2RouteTableE34659A3"
    },
    "SubnetId": {
     "Ref": "CloudSentinelVpcPublicSubnet2Subnet0F4A1BA0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "CloudSentinelVpcPublicSubnet2DefaultRoute2E5F8B5C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CloudSentinelVpcIGW997EA9B6"
    },
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPublicSubnet2RouteTableE34659A3"
    }
   },
   "DependsOn": [
    "CloudSentinelVpcVPCGW620BC6C2"
   ],
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "CloudSentinelVpcPrivateSubnet1SubnetFDE52B93": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1/Subnet"
   }
  },
  "CloudSentinelVpcPrivateSubnet1RouteTableD8030AF0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1/RouteTable"
   }
  },
  "CloudSentinelVpcPrivateSubnet1RouteTableAssociationF2ED7AA1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPrivateSubnet1RouteTableD8030AF0"
    },
    "SubnetId": {
     "Ref": "CloudSentinelVpcPrivateSubnet1SubnetFDE52B93"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "CloudSentinelVpcPrivateSubnet1DefaultRoute50D57439": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CloudSentinelVpcPublicSubnet1NATGateway1CFCBC48"
    },
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPrivateSubnet1RouteTableD8030AF0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "CloudSentinelVpcPrivateSubnet2Subnet4E4D73E7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2/Subnet"
   }
  },
  "CloudSentinelVpcPrivateSubnet2RouteTableC9A41279": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ],
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2/RouteTable"
   }
  },
  "CloudSentinelVpcPrivateSubnet2RouteTableAssociation42B43701": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPrivateSubnet2RouteTableC9A41279"
    },
    "SubnetId": {
     "Ref": "CloudSentinelVpcPrivateSubnet2Subnet4E4D73E7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "CloudSentinelVpcPrivateSubnet2DefaultRouteA80A3372": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CloudSentinelVpcPublicSubnet1NATGateway1CFCBC48"
    },
    "RouteTableId": {
     "Ref": "CloudSentinelVpcPrivateSubnet2RouteTableC9A41279"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "CloudSentinelVpcIGW997EA9B6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "ManagedBy",
      "Value": "CDK-Python"
     },
     {
      "Key": "Name",
      "Value": "CloudSentinel-Network/CloudSentinelVpc"
     },
     {
      "Key": "Project",
      "Value": "CloudSentinel"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/IGW"
   }
  },
  "CloudSentinelVpcVPCGW620BC6C2": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "CloudSentinelVpcIGW997EA9B6"
    },
    "VpcId": {
     "Ref": "CloudSentinelVpcB6080008"
    }
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CloudSentinelVpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WO0QqCQBREv8X3dSutDxCJ8KUWDV/jut1wU3fFvZuI+O9hhj7NzGEYJuDB6cj3HvTWl8/Kr1XBx4xAVgx6+0AZ8DFvJYtfOhcxE66olcxcoZFmtrnUOMI7FDVufGORtUYqIGX0Wp7NORGzXIEuQNjDwESnPkC4DSeasNO4FpYn/xQRgSwb1DSxFK1xnfzt3hy1jiYmBiqN3oX8EPDQe1ul/M5pUg3ydNEvyl+2aAEBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "CloudSentinel-Network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "CloudSentinelVpcB6080008"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
